welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: not found: value surBiscuit
		if (surBiscuit() == true) {
                    ^Poucet:6: error: not found: value compteur
			compteur = compteur + 1;
                        ^Poucet:9: error: not found: value compteur
	if (compteur <= 2) {
            ^